force-app/main/default/objects/NI_IMT_Contact__c/NI_IMT_Contact__c.object-meta.xml
<CustomObject>
    <description>Used by the IMT Implementation Tool Customer Community to capture the individual contacts that will be setup as community users. These records will be linked to the corresponding record on the standard Contact object via a lookup field.</description>
    <label>Contact (IMT)</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts (IMT)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>