force-app/main/default/objects/NI_IMT_Contact__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Country</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>