force-app/main/default/objects/NI_IMT_Contact__c/fields/Record_Type_and_Email__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_and_Email__c</fullName>
    <description>This field is automatically populated by a workflow rule with the Record Type and Contact Email for this record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is automatically populated by a workflow rule with the Record Type and Contact Email for this record.</inlineHelpText>
    <label>Record Type and Email</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>