force-app/main/default/objects/NI_IMT_Contact__c/recordTypes/InterContinental_Hotels_Group.recordType-meta.xml
<RecordType>
    <fullName>InterContinental_Hotels_Group</fullName>
    <active>true</active>
    <description>InterContinental Hotels Group Contact</description>
    <label>InterContinental Hotels Group</label>
</RecordType>