force-app/main/default/objects/NI_IMT_Contact__c/validationRules/CountryCodeLength.validationRule-meta.xml
<ValidationRule>
    <fullName>CountryCodeLength</fullName>
    <active>true</active>
    <description>For IMT contacts, the country code must be 3 characters</description>
    <errorConditionFormula>LEN( Country__c ) &lt;&gt; 2</errorConditionFormula>
    <errorDisplayField>Country__c</errorDisplayField>
    <errorMessage>The country code must be 2 characters</errorMessage>
</ValidationRule>